--- a/scrapydweb/templates/base.html
+++ b/scrapydweb/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} · ScrapydWeb</title>
+    <title>{% block title %}{% endblock %} - ScrapydWeb</title>
 
     <link rel="stylesheet" type="text/css" href="{{ static_css_style }}">
     <!-- <script type="text/javascript" src="//at.alicdn.com/t/font_842334_l99noezu13o.js"></script>  -->
