--- a/scrapydweb/templates/scrapydweb/monitoring.html
+++ b/scrapydweb/templates/scrapydweb/monitoring.html
@@ -17,12 +17,12 @@
     }
   </style>
 
-  {% if SCRAPYD_SERVERS_AMOUNT == 1 and (pageview == 1 or pageview % CHECK_LATEST_VERSION_FREQ == 0) %}
-  <script type="text/javascript" src="https://my8100.herokuapp.com/check_update?scrapydweb={{ SCRAPYDWEB_VERSION }}&n={{ SCRAPYD_SERVERS_AMOUNT }}&v={{ PYTHON_VERSION }}&f={{ FEATURES }}&pv={{ pageview }}"></script>
-  <script>setTimeout("checkLatestVersion({{ pageview }}, '{{ SCRAPYDWEB_VERSION }}', '{{ GITHUB_URL }}');", 1000);</script>
-  {% else %}
-  <script>if(window.localStorage && localStorage.getItem('github') !== null) {localStorage.removeItem('github');}</script>
-  {% endif %}
+{#  {% if SCRAPYD_SERVERS_AMOUNT == 1 and (pageview == 1 or pageview % CHECK_LATEST_VERSION_FREQ == 0) %}#}
+{#  <script type="text/javascript" src="https://my8100.herokuapp.com/check_update?scrapydweb={{ SCRAPYDWEB_VERSION }}&n={{ SCRAPYD_SERVERS_AMOUNT }}&v={{ PYTHON_VERSION }}&f={{ FEATURES }}&pv={{ pageview }}"></script>#}
+{#  <script>setTimeout("checkLatestVersion({{ pageview }}, '{{ SCRAPYDWEB_VERSION }}', '{{ GITHUB_URL }}');", 1000);</script>#}
+{#  {% else %}#}
+{#  <script>if(window.localStorage && localStorage.getItem('github') !== null) {localStorage.removeItem('github');}</script>#}
+{#  {% endif %}#}
 
   <script type="text/javascript" src="{{ static_js_vue_min }}"></script>
   <script type="text/javascript" src="{{ static_js_element_ui_index }}"></script>
@@ -33,9 +33,18 @@
 {% if (SCRAPYD_SERVERS_AMOUNT == 1 and pageview == 1) or IS_IE_EDGE %}
 <script>(function () {try {checkBrowser();} catch(err) {console.log(err);}})();</script>
 {% endif %}
-    <h1>Monitoring view for the spider '{{ spider }}'</h1>
-    <p>Cette page permet le suivit et le monitoring d'un spider en affichant son historique.</p>
-    <br>
-    {{ graphHTML | safe }}
+    <div class="el-container is-vertical">
+        <div class="el-row is-justify-center">
+            <div class="el-col el-col-20">
+                <h1>Monitoring view for the spider '{{ spider }}' [<a href="{{ log_url }}">logs</a>]</h1>
+            </div>
+            <div class="el-col el-col-4">
+                <a class="github-button" href="{{ github_link }}">Report an issue</a>
+            </div>
+        </div>
+        <p>Cette page permet le suivit et le monitoring d'un spider en affichant son historique.</p>
 
+        <h2>Scraping historic</h2>
+        {{ graphHTML | safe }}
+    </div>
 {% endblock %}
