--- a/scrapydweb/templates/scrapydweb/cluster_reports.html
+++ b/scrapydweb/templates/scrapydweb/cluster_reports.html
@@ -43,8 +43,8 @@
     :default-sort="{prop: 'node', order: 'ascending'}"
   >
 
-    <el-table-column prop="node" label="Node" fixed sortable align="center" width="70"></el-table-column>
-    <el-table-column prop="stats" label="Stats" fixed sortable :sort-method="sortStatus" align="center" width="100">
+    <el-table-column prop="node" label="Node" sortable align="center" width="70"></el-table-column>
+    <el-table-column prop="stats" label="Stats" sortable :sort-method="sortStatus" align="center" width="100">
       <template slot-scope="scope">
         <a target="_blank" :class="scope.row.stats_class" v-bind:style="{display: scope.row.stats_display}" :href="scope.row.stats_url">
           {{scope.row.stats}}
